--- a/src/styles/scss/components/Projects.scss
+++ b/src/styles/scss/components/Projects.scss
@@ -1,16 +1,16 @@
 @import '../variables.scss';
 
 #projects {
-  margin-left: 1rem;
-  margin-right: 1rem;
+  margin-left: 16px;
+  margin-right: 16px;
 }
 
 .project {
-  border-radius: 0.6rem;
-  padding: 1rem;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  width: 24rem;
+  border-radius: 8px;
+  padding: 16px;
+  margin-top: 16px;
+  margin-bottom: 16px;
+  width: 360px;
 }
 
 .project-name {
@@ -21,8 +21,8 @@
 .project-paragraph {
   color: $secondaryTextColor;
   font-size: 14px;
-  padding-top: 0.4rem;
-  padding-bottom: 0.4rem;
+  padding-top: 8px;
+  padding-bottom: 8px;
 }
 
 .availability {
@@ -35,7 +35,7 @@
 .availability-text {
   color: $primaryTextColor;
   font-size: 14px;
-  padding-right: 1rem;
+  padding-right: 16px;
 }
 
 .platforms {
@@ -45,7 +45,7 @@
 }
 
 .platform {
-  margin-left: 1rem;
+  margin-left: 16px;
   color: $primaryTextColor;
   font-size: 14px;
 }
